--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,7 +3,7 @@ body {
   }
   
   .container {
-    width: 850px;
+    width: 650px;
     height: 600px;
     background-color: white;
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.2);
