--- a/src/components/Recipe/Recipe.css
+++ b/src/components/Recipe/Recipe.css
@@ -1,5 +1,5 @@
 .recipeBody {
-  height: 100%
+  height: 80vh;
 }
 
 .input-div {
